--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Weather Web App</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" href="weather.png"/>
+   <title>Weather Web App</title>
   </head>
   <body>
     <h3>Vishrut's Weather App</h3><br><br>
